[package]
name = "kuberator"
version = "0.3.0"
edition = "2021"
authors = ["Mathias Oertel <mathias.oertel@gmail.com>"]
description = "A Kubernetes operator framework in Rust"
documentation = "https://docs.rs/kuberator"
readme = "README.md"
keywords = ["operator", "k8s", "kubernetes"]
license = "MIT"
repository = "https://github.com/maoertel/kuberator"

[dependencies]
kube = { version = "2.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26", features = ["latest"] }

futures = { version = "0.3", default-features = false }
async-trait = "0.1"

schemars = "1.1"
serde = { version = "1.0", features = ["derive", "rc"] }

tracing = "0.1"

thiserror = "2.0"
anyhow = "1.0"

chrono = { version = "0.4", default-features = false, features = ["std"] }
strum = { version = "0.27", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tower-test = "0.4"
http = "1.0"
hyper = "1.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
